# Intel_TIV

./: README.md  config  configure  configure.ac
ff_planner_input_files/: arm_domain.pddl  arm_problem_1  arm_problem_2
src/: driver.py.in
src/microtesk_template_generator/: Action_Database.txt  ConditionsModule.py  TemplateGenerator.py  Template_Database.txt
